# TP_HAI719

./: .gitmodules
template/: AssimpLog.txt  CMakeLists.txt  README.md  build.sh  run.sh
template/include/: Camera.h  Context.h  Keyboard.h  Material.h  Mesh.h  Mouse.h  SceneLoader.h  Shader.h  Texture.h  UnlitMaterial.h
template/shaders/phong/: fragment_shader.glsl
template/shaders/unlit/: fragment.glsl  skyvertex.glsl  vertex.glsl
template/src/: Camera.cpp  Context.cpp  Keyboard.cpp  Material.cpp  Mesh.cpp  Mouse.cpp  SceneLoader.cpp  Shader.cpp  Texture.cpp  UnlitMaterial.cpp  main.cpp  stb_image.cpp
